--- a/Assignment 2/Q2.html
+++ b/Assignment 2/Q2.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <center>
-      <table border="2" width="200px" style="text-align: center">
+      <table border="2" width="200px" style="text-align: center ; table-layout: fixed;">
         <tr>
           <td colspan="8">A</td>
         </tr>
