--- a/Assignment 2/Q1.html
+++ b/Assignment 2/Q1.html
@@ -6,43 +6,290 @@
     <title>Assignment 2 Q1</title>
   </head>
   <body>
-    
     Row 1
-    <div style="width: 100%; height: 5px;">
-        <div style="background-color: red ; width: 50%; height: 20px; float: left;"></div>
-        <div style="background-color: blue; width: 50%; height: 20px; float: left;"></div>
+    <div style="width: 100%; height: 5px">
+      <div
+        style="
+          background-color: red;
+          width: 50%;
+          height: 20px;
+          float: left;
+        "></div>
+      <div
+        style="
+          background-color: blue;
+          width: 50%;
+          height: 20px;
+          float: left;
+        "></div>
     </div>
-    <br>
-    <br>
+    <br />
+    <br />
     Row 2
-    <div style="width: 100%; height: 5px;">
-        <div style="background-color: green ; width: 95%; height: 20px; float: left;"></div>
-        <div style="background-color: blue; width: 5%; height: 20px; float: left;"></div>
+    <div style="width: 100%; height: 5px">
+      <div
+        style="
+          background-color: green;
+          width: 95%;
+          height: 20px;
+          float: left;
+        "></div>
+      <div
+        style="
+          background-color: blue;
+          width: 5%;
+          height: 20px;
+          float: left;
+        "></div>
     </div>
 
-    <br>
-    <br><br>
+    <br />
+    <br /><br />
     Student TODOs
-    <br><br>
+    <br /><br />
     Row 3
-    <div style="width: 100%; height: 5px;">
-        <div style="background-color: red ; width: 5%; height: 20px; float: left;"></div>
-        <div style="background-color: green ; width: 90%; height: 20px; float: left;"></div>
-        <div style="background-color: blue; width: 5%; height: 20px; float: left;"></div>
+    <div style="width: 100%; height: 5px">
+      <div
+        style="
+          background-color: red;
+          width: 5%;
+          height: 20px;
+          float: left;
+        "></div>
+      <div
+        style="
+          background-color: green;
+          width: 90%;
+          height: 20px;
+          float: left;
+        "></div>
+      <div
+        style="
+          background-color: blue;
+          width: 5%;
+          height: 20px;
+          float: left;
+        "></div>
     </div>
-    <br><br>
+    <br /><br />
     Row 4
-    <div style="width: 100%; height: 5px;">
-        <div style="background-color: red ; width: 95%; height: 20px; float: left;"></div>
-        <div style="background-color: blue; width: 5%; height: 20px; float: left;"></div>
+    <div style="width: 100%; height: 5px">
+      <div
+        style="
+          background-color: red;
+          width: 95%;
+          height: 20px;
+          float: left;
+        "></div>
+      <div
+        style="
+          background-color: blue;
+          width: 5%;
+          height: 20px;
+          float: left;
+        "></div>
     </div>
-    <br><br>
+    <br /><br />
     Row 5
-    <div style="width: 100%; height: 5px; position: relative;">
-        <div style="background-color: green ; width: 100%; height: 20px; float: left;"></div>
-        <div style="background-color: blue; width: 20px; height: 15px; position: absolute; left: 50%;"></div>
+    <div style="width: 100%; height: 5px; position: relative">
+      <div
+        style="background-color: green; width: 100%; height: 20px; float: left">
+        <div
+          style="
+            background-color: red;
+            width: 20px;
+            height: 15px;
+            margin-top: 0.2%;
+            position: absolute;
+            left: 50%;
+          "></div>
+      </div>
+    </div>
+    <br /><br />
+    Row 6
+    <div style="width: 100%; height: 5px">
+      <div
+        style="
+          background-color: red;
+          width: 47.5%;
+          height: 20px;
+          float: left;
+        "></div>
+      <div
+        style="
+          background-color: blue;
+          width: 5%;
+          height: 20px;
+          float: left;
+        "></div>
+      <div
+        style="
+          background-color: red;
+          width: 47.5%;
+          height: 20px;
+          float: right;
+        "></div>
+    </div>
+    <br /><br />
+    Row 7
+    <div style="width: 100%; height: 5px">
+      <div
+        style="
+          background-color: red;
+          width: 5%;
+          height: 30px;
+          float: left;
+        "></div>
+      <div
+        style="background-color: blue; width: 95%; height: 30px; float: left">
+        <div
+          style="
+            background-color: green;
+            width: 100%;
+            margin-top: 6.5px;
+            height: 15px;
+            float: right;
+          "></div>
+      </div>
+    </div>
+    <br /><br />
+    Row 8
+    <div style="width: 100%; height: 5px"></div>
+    <div
+      style="background-color: green; width: 100%; height: 30px; float: left">
+      <div
+        style="
+          background-color: orange;
+          width: 5%;
+          height: 30px;
+          float: left;
+        "></div>
+      <div
+        style="
+          background-color: green;
+          width: 18.75%;
+          height: 30px;
+          float: left;
+        "></div>
+      <div
+        style="
+          background-color: orange;
+          width: 5%;
+          height: 30px;
+          float: left;
+        "></div>
+      <div
+        style="
+          background-color: green;
+          width: 18.75%;
+          height: 30px;
+          float: left;
+        "></div>
+      <div
+        style="
+          background-color: orange;
+          width: 5%;
+          height: 30px;
+          float: left;
+        "></div>
+      <div
+        style="
+          background-color: green;
+          width: 18.75%;
+          height: 30px;
+          float: left;
+        "></div>
+      <div
+        style="
+          background-color: orange;
+          width: 5%;
+          height: 30px;
+          float: left;
+        "></div>
+      <div
+        style="
+          background-color: green;
+          width: 18.75%;
+          height: 30px;
+          float: left;
+        "></div>
+      <div
+        style="
+          background-color: orange;
+          width: 5%;
+          height: 30px;
+          float: left;
+        "></div>
     </div>
 
-    
+    <br /><br />
+    Row 9
+    <div style="width: 100%; height: 5px"></div>
+    <div
+      style="background-color: green; width: 100%; height: 30px; float: left">
+      <div
+        style="
+          background-color: orange;
+          width: 19.2%;
+          height: 30px;
+          float: left;
+        "></div>
+      <div
+        style="
+          background-color: green;
+          width: 1%;
+          height: 30px;
+          float: left;
+        "></div>
+      <div
+        style="
+          background-color: orange;
+          width: 19.2%;
+          height: 30px;
+          float: left;
+        "></div>
+      <div
+        style="
+          background-color: green;
+          width: 1%;
+          height: 30px;
+          float: left;
+        "></div>
+      <div
+        style="
+          background-color: orange;
+          width: 19.2%;
+          height: 30px;
+          float: left;
+        "></div>
+      <div
+        style="
+          background-color: green;
+          width: 1%;
+          height: 30px;
+          float: left;
+        "></div>
+      <div
+        style="
+          background-color: orange;
+          width: 19.2%;
+          height: 30px;
+          float: left;
+        "></div>
+      <div
+        style="
+          background-color: green;
+          width: 1%;
+          height: 30px;
+          float: left;
+        "></div>
+      <div
+        style="
+          background-color: orange;
+          width: 19.2%;
+          height: 30px;
+          float: right;
+        "></div>
+    </div>
   </body>
 </html>
