--- a/Assignment 2/Q3/Q3.html
+++ b/Assignment 2/Q3/Q3.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,49 +6,278 @@
     <title>Q3</title>
     <style>
       .body {
-        background-color: grey;
+        background-color: rgb(89, 88, 88);
       }
       .bar {
         position: absolute;
         background-color: white;
-        width: 50%;
+        width: 60%;
         height: 80px;
         opacity: 50%;
         margin-top: 25px;
-        margin: 60px;
-        margin-left: 350px;
+        margin: 80px;
+        margin-left: 190px;
         border-radius: 10px;
         text-align: left;
+        position: relative;
+      }
+      .note1 {
+        border: 2px black solid;
+        width: 200px;
+        height: 200px;
       }
     </style>
   </head>
   <body class="body">
     <center>
       <div class="bar">
-          <div style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; margin-left: 15px; text-align: center; float: left; width: 100px; margin-top: 8px;"> HTML5Sticky <br>Sticky Notes for Web</div>
-          <div style="margin-left: 300px;">
-
-            <img src="plus.svg" alt="add File" style="height: 45px" />
-            
+        <div
+          style="
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS',
+              sans-serif;
+            margin-left: 15px;
+            text-align: center;
+            float: left;
+            width: 100px;
+            margin-top: 8px;
+          ">
+          HTML5Sticky <br />Sticky Notes for Web
         </div>
-        <div style="margin-top: -80px;">
-
-            <input
-              type="button"
-              value="$ Donate"
-              style="
-                float: right;
-                margin-top: 30px;
-                margin-right: 20px;
-                background-color: rgb(50, 50, 235);
-                color: white;
-              " />
-            <img
-              src="logo-twitter.svg"
-              alt="share via twitter"
-              style="height: 45px; float: right; margin-top: 20px" />
+        <div style="margin-left: 300px">
+          <img src="plus.svg" alt="add File" style="height: 45px" />
+          <img
+            src="close-circle-outline.svg"
+            alt="add File"
+            style="height: 45px" />
+          <img src="document-outline.svg" alt="add File" style="height: 45px" />
+          <img src="folder-outline.svg" alt="add File" style="height: 45px" />
         </div>
+        <div style="margin-top: -80px">
+          <input
+            type="button"
+            value="$ Donate"
+            style="
+              float: right;
+              margin-top: 30px;
+              margin-right: 20px;
+              background-color: rgb(50, 50, 235);
+              color: white;
+            " />
+          <img
+            src="logo-twitter.svg"
+            alt="share via twitter"
+            style="height: 45px; float: right; margin-top: 20px" />
+        </div>
+      </div>
+
+      <table
+        border="0"
+        style="table-layout: fixed; text-align: center; border-spacing: 50px">
+        <tr>
+          <td>
+            <div class="note1" style="background-color: rgb(240, 82, 82)">
+              <b>18/03/2024 12:40 PM</b>
+              <br />
+              <textarea
+                name="Type here..."
+                id=""
+                style="height: 160px; background-color: rgb(240, 82, 82)">
+Type Here... </textarea
+              >
+            </div>
+          </td>
+
+          <td>
+            <div class="note1" style="background-color: rgb(90, 25, 127)">
+              <b>18/03/2024 12:40 PM</b>
+              <br />
+              <textarea
+                name="Type here..."
+                id=""
+                style="height: 160px; background-color: rgb(90, 25, 127)">
+Type Here... </textarea
+              >
+            </div>
+          </td>
+
+          <td>
+            <div class="note1" style="background-color: rgb(29, 105, 94)">
+              <b>18/03/2024 12:40 PM</b>
+              <br />
+              <textarea
+                name="Type here..."
+                id=""
+                style="height: 160px; background-color: rgb(29, 105, 94)">
+Type Here... </textarea
+              >
+            </div>
+          </td>
+
+          <td>
+            <div class="note1" style="background-color: rgb(147, 157, 40)">
+              18/03/2024 12:40 PM
+              <br />
+              <textarea
+                name="Type here..."
+                id=""
+                style="height: 160px; background-color: rgb(147, 157, 40)">
+Type Here... </textarea
+              >
+            </div>
+          </td>
+
+          <td>
+            <div class="note1" style="background-color: rgb(29, 56, 192)">
+              18/03/2024 12:40 PM
+              <br />
+              <textarea
+                name="Type here..."
+                id=""
+                style="height: 160px; background-color: rgb(29, 56, 192)">
+Type Here... </textarea
+              >
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <div class="note1" style="background-color: rgb(240, 82, 82)">
+              <b>18/03/2024 12:40 PM</b>
+              <br />
+              <textarea
+                name="Type here..."
+                id=""
+                style="height: 160px; background-color: rgb(240, 82, 82)">
+Type Here... </textarea
+              >
+            </div>
+          </td>
+
+          <td>
+            <div class="note1" style="background-color: rgb(90, 25, 127)">
+              <b>18/03/2024 12:40 PM</b>
+              <br />
+              <textarea
+                name="Type here..."
+                id=""
+                style="height: 160px; background-color: rgb(90, 25, 127)">
+Type Here... </textarea
+              >
+            </div>
+          </td>
+
+          <td>
+            <div class="note1" style="background-color: rgb(29, 105, 94)">
+              <b>18/03/2024 12:40 PM</b>
+              <br />
+              <textarea
+                name="Type here..."
+                id=""
+                style="height: 160px; background-color: rgb(29, 105, 94)">
+Type Here... </textarea
+              >
+            </div>
+          </td>
+
+          <td>
+            <div class="note1" style="background-color: rgb(147, 157, 40)">
+              18/03/2024 12:40 PM
+              <br />
+              <textarea
+                name="Type here..."
+                id=""
+                style="height: 160px; background-color: rgb(147, 157, 40)">
+Type Here... </textarea
+              >
+            </div>
+          </td>
+
+          <td>
+            <div class="note1" style="background-color: rgb(29, 56, 192)">
+              18/03/2024 12:40 PM
+              <br />
+              <textarea
+                name="Type here..."
+                id=""
+                style="height: 160px; background-color: rgb(29, 56, 192)">
+Type Here... </textarea
+              >
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <div class="note1" style="background-color: rgb(240, 82, 82)">
+              <b>18/03/2024 12:40 PM</b>
+              <br />
+              <textarea
+                name="Type here..."
+                id=""
+                style="height: 160px; background-color: rgb(240, 82, 82)">
+Type Here... </textarea
+              >
+            </div>
+          </td>
+
+          <td>
+            <div class="note1" style="background-color: rgb(90, 25, 127)">
+              <b>18/03/2024 12:40 PM</b>
+              <br />
+              <textarea
+                name="Type here..."
+                id=""
+                style="height: 160px; background-color: rgb(90, 25, 127)">
+Type Here... </textarea
+              >
+            </div>
+          </td>
+
+          <td>
+            <div class="note1" style="background-color: rgb(29, 105, 94)">
+              <b>18/03/2024 12:40 PM</b>
+              <br />
+              <textarea
+                name="Type here..."
+                id=""
+                style="height: 160px; background-color: rgb(29, 105, 94)">
+Type Here... </textarea
+              >
+            </div>
+          </td>
+
+          <td>
+            <div class="note1" style="background-color: rgb(147, 157, 40)">
+              18/03/2024 12:40 PM
+              <br />
+              <textarea
+                name="Type here..."
+                id=""
+                style="height: 160px; background-color: rgb(147, 157, 40)">
+Type Here... </textarea
+              >
+            </div>
+          </td>
+
+          <td>
+            <div class="note1" style="background-color: rgb(29, 56, 192)">
+              18/03/2024 12:40 PM
+              <br />
+              <textarea
+                name="Type here..."
+                id=""
+                style="height: 160px; background-color: rgb(29, 56, 192)">
+Type Here... </textarea
+              >
+            </div>
+          </td>
+        </tr>
+      </table>
+      <div>
+        <img
+          src="logo-twitter.svg"
+          alt="share via twitter"
+          style="height: 45px; float: center; margin-top: 20px" />
       </div>
     </center>
   </body>
-</html> -->
+</html>
